<resources>
    <string name="app_name">sbh</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome back into SBH SHOP</string>
    <string name="info">enjoy new experience in the best shop in tunisia</string>
    <string name="label_email">Your Email</string>
    <string name="hint_email">Enter your Email</string>
    <string name="password_label">Your Password</string>
    <string name="register">don\'t have account? register</string>
    <string name="description_board">disription</string>
    <string name="first_slide">first\n</string>
    //Titres
    <string name="heading_one">Explorez Notre Gamme de Produits Pharmaceutiques</string>
    <string name="heading_two">Restez Informé avec Nos Conseils Santé</string>
    <string name="heading_three">Gérez Vos Commandes Facilement</string>
    <string name="heading_fourth">Paiements Sécurisés et Simples</string>

    //Description
    <string name="desc_one">Découvrez une vaste sélection de produits pharmaceutiques adaptés à vos besoins de santé. Des médicaments en vente libre aux vitamines et aux compléments, nous avons tout ce dont vous avez besoin.</string>
    <string name="desc_two">Recevez des conseils de santé et des recommandations directement dans votre boîte de réception. Restez informé des dernières tendances en matière de santé et de bien-être pour mener une vie plus saine.</string>
    <string name="desc_three">Gérez facilement vos commandes en ligne avec notre plateforme conviviale.</string>
    <string name="desc_fourth">Effectuez vos paiements en toute sécurité et simplicité grâce à nos options de paiement sécurisées.</string>

    <string-array name="tunisian_states">
        <item>Choisir votre Etat</item>
        <item>Ariana</item>
        <item>Beja</item>
        <item>Ben Arous</item>
        <item>Bizerte</item>
        <item>Gabes</item>
        <item>Gafsa</item>
        <item>Jendouba</item>
        <item>Kairouan</item>
        <item>Kasserine</item>
        <item>Kebili</item>
        <item>Kef</item>
        <item>Mahdia</item>
        <item>Manouba</item>
        <item>Medenine</item>
        <item>Monastir</item>
        <item>Nabeul</item>
        <item>Sfax</item>
        <item>Sidi Bouzid</item>
        <item>Siliana</item>
        <item>Sousse</item>
        <item>Tataouine</item>
        <item>Tozeur</item>
        <item>Tunis</item>
        <item>Zaghouan</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>